force-app/main/default/objects/RevRecAppSetting__c/RevRecAppSetting__c.object-meta.xml
<CustomObject>
    <description>The global setting for RecRec app</description>
    <label>RevRecAppSetting</label>
    <nameField>
        <label>RevRecAppSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecAppSetting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>