force-app/main/default/objects/RevRecAppSetting__c/fields/Certain_date_of_month_tr__c.field-meta.xml
<CustomField>
    <fullName>Certain_date_of_month_tr__c</fullName>
    <label>Certain date of month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>