force-app/main/default/objects/RevRecAppSetting__c/fields/Certain_days_before_last_weekday_day__c.field-meta.xml
<CustomField>
    <fullName>Certain_days_before_last_weekday_day__c</fullName>
    <label>Certain days before last weekday day</label>
    <length>50</length>
    <type>Text</type>
</CustomField>