force-app/main/default/objects/RevRecAppSetting__c/fields/Certain_weekday__c.field-meta.xml
<CustomField>
    <fullName>Certain_weekday__c</fullName>
    <label>Certain weekday</label>
    <length>50</length>
    <type>Text</type>
</CustomField>