force-app/main/default/objects/RevRecAppSetting__c/fields/Certain_weekday_day_tr__c.field-meta.xml
<CustomField>
    <fullName>Certain_weekday_day_tr__c</fullName>
    <label>Certain weekday day</label>
    <length>50</length>
    <type>Text</type>
</CustomField>