force-app/main/default/objects/RevRecAppSetting__c/fields/Chart_Pref__c.field-meta.xml
<CustomField>
    <fullName>Chart_Pref__c</fullName>
    <label>View Chart Preference</label>
    <length>2</length>
    <type>Text</type>
</CustomField>