force-app/main/default/objects/RevRecAppSetting__c/fields/cron_job_id__c.field-meta.xml
<CustomField>
    <fullName>cron_job_id__c</fullName>
    <label>cron_job_id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>