force-app/main/default/objects/RevRecAppSetting__c/fields/DiagnosticsEnabled__c.field-meta.xml
<CustomField>
    <fullName>DiagnosticsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DiagnosticsEnabled</label>
    <type>Checkbox</type>
</CustomField>