force-app/main/default/objects/RevRecAppSetting__c/fields/Enable_Rule_Processing_Engine__c.field-meta.xml
<CustomField>
    <fullName>Enable_Rule_Processing_Engine__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Rule Processing Engine</label>
    <type>Checkbox</type>
</CustomField>