force-app/main/default/objects/RevRecAppSetting__c/fields/Is_Closed_Date_Validation__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed_Date_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed Date Validation</label>
    <type>Checkbox</type>
</CustomField>