force-app/main/default/objects/RevRecAppSetting__c/fields/Opportunity_Quote_Line_Item_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Quote_Line_Item_Sales_Price__c</fullName>
    <label>Opportunity Quote Line Item Sales Price</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>