force-app/main/default/objects/RevRecAppSetting__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <label>Opportunity Record Type</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>