force-app/main/default/objects/RevRecAppSetting__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>