force-app/main/default/objects/RevRecAppSetting__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>