force-app/main/default/objects/RevRecAppSetting__c/fields/OpportunityStage_Label__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStage_Label__c</fullName>
    <label>OpportunityStage Label</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>