force-app/main/default/objects/RevRecAppSetting__c/fields/Selected_Start_Date_Types__c.field-meta.xml
<CustomField>
    <fullName>Selected_Start_Date_Types__c</fullName>
    <label>Selected Start Date Types</label>
    <length>3072</length>
    <type>LongTextArea</type>
</CustomField>