force-app/main/default/objects/RevRecAppSetting__c/fields/Set_SchDef_0__c.field-meta.xml
<CustomField>
    <fullName>Set_SchDef_0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Schedule Deferred With 0 ToBeDeleted</label>
    <type>Checkbox</type>
</CustomField>