force-app/main/default/objects/RevRecAppSetting__c/fields/Time_of_Month_Selection_Types__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Month_Selection_Types__c</fullName>
    <description>1 - Last day of the month
2 - Specific date of the month
3 - Specific week day on certain week of the month
4 - Certain days before certain week of the month
5 - Last business day of the month</description>
    <label>Time of Month Selection Types</label>
    <length>2</length>
    <type>Text</type>
</CustomField>