force-app/main/default/objects/RevRecAppSetting__c/fields/Time_of_Month_Selection_Types_tr__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Month_Selection_Types_tr__c</fullName>
    <label>Time of Month Selection Types</label>
    <length>50</length>
    <type>Text</type>
</CustomField>