force-app/main/default/objects/RevRecAppSetting__c/fields/Validate_Amortized_Milestones_Against_Li__c.field-meta.xml
<CustomField>
    <fullName>Validate_Amortized_Milestones_Against_Li__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Amortized Milestones Against Li</label>
    <type>Checkbox</type>
</CustomField>